Changed aspect ratio to aspectratio=1610 for documentclass.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -15,7 +15,7 @@
 %	PACKAGES AND THEMES
 %----------------------------------------------------------------------------------------
 
-\documentclass[hideothersubsections, t]{beamer}
+\documentclass[hideothersubsections, t, aspectratio=1610]{beamer}
 
 \mode<presentation> {
 
