Modified script in Introduction Overview.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -168,6 +168,7 @@
 \note[item]{In this section we will talk about,}
 \begin{itemize}
 \item Programming languages and paradigms.
+\note[item]{Programming languages and programming paradigms.}
 
 \item Classification.
 \note[item]{How they are classified}
