Modified script in Programming Languages in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -197,8 +197,8 @@ A programming language is an artificial language designed to communicate instruc
     \end{block}
     \end{column}
   \end{columns}
-
-\note[item]{Beginning with programming languages, they are in the hundereds and thousands.}
+\note[item]{A programming language is used to communicate instructions to a computer.}
+\note[item]{They are in the hundereds of thousands and the number keeps on increasing.}
 \end{frame}
 
 \subsection{Programming Language Paradigms}
