Modified script for Programming Language Paradigms in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -221,7 +221,8 @@ A programming paradigm is a fundamental style of computer programming, a way of 
     \end{block}
     \end{column}
   \end{columns}
-  \note[item]{}
+  \note[item]{The fundamental style or manner in which a computer program is built is known as a programming paradigm.}
+  \note[item]{For example, the object oriented style of programming.}
 \end{frame}
 
 \begin{frame}
