Modified content and script for Classification in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -231,7 +231,7 @@ A programming paradigm is a fundamental style of computer programming, a way of 
     \begin{column}{.5\textwidth}
      \begin{block}{}
 Programming languages are classified into paradigms depending on their characteristics and features. 
-\\*For example, \textsc{Java} is an Object Oriented Programming Language.
+\\*For example, \progLang{Java} is an Object Oriented Programming Language.
     \end{block}
     \end{column}
     \begin{column}{.5\textwidth}
@@ -244,7 +244,8 @@ Programming languages are classified into paradigms depending on their character
     \end{block}
     \end{column}
   \end{columns}
-  \note[item]{}
+  \note[item]{Depending on the characteristics exhibited by a language into paradigms.}
+  \note[item]{\progLang{Java} is an object oriented programming language.}
 \end{frame}
 
 
