Added content and script to Background Overview in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -256,9 +256,21 @@ Programming languages are classified into paradigms depending on their character
 %% ====================================================================-
 \subsection{Overview}
 \begin{frame}{Background Overview}
-	
-	\frametitle{Background Overview}
-	
+\frametitle{Background Overview}
+\note[item]{For the background, we will look at,}
+\begin{itemize}
+\item Declarative programming and languages.
+\note[item]{The declarative stlye of programming,} 
+
+\item Functional and logic programming.
+\note[item]{and it's sub-paradigms functional and logic programming,}
+
+\item \progLang{Haskell} and \progLang{Prolog}.
+\note[item]{along with the languages in question, \progLang{Haskell} and \progLang{Prolog},}
+
+\item Merging programming languages.
+\note[item]{And the approaches for bringing programming languages together.}
+\end{itemize}
 \end{frame}
 
 
