Added content and script to Declarative Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -279,14 +279,21 @@ Programming languages are classified into paradigms depending on their character
 \begin{frame}
 \frametitle{Declarative Programming}
 \begin{itemize}
-\item Declarative style of programming.
-
-These languages are said to describe (declaratively) what to do and not (operationally) how to do it.
+\item Declarative style of programming, describe (declaratively) what to do and not (operationally) how to do it. 
 \note[item]{http://www.eolss.net/sample-chapters/c15/e6-45-05-04.pdf}
-\note[item]{One such style is the declarative paradigm, where the describe the logic of a computation without the control flow.[Practical 
+\note[item]{One such style is the declarative paradigm, where we describe the logic of a computation without the control flow.[Practical 
 Advantages of Declarative Programming Lloyd, J.W]}
 
 \note[item]{It further branches out into functional and logic programming.}
+
+\item Programming in a functional language consists of building definitions and using the computer to evaluate expressions.
+\note[item]
+
+\item In logic programming, a program consists of a collection of statements ex-pressed as formulas in symbolic logic. There are rules of 
+inference from logic that allow a new formula to be derived from old ones, with the guarantee that if the old formulas are true, so is the 
+new one.
+\note[item]{Logic programming allows a new formula to be dreived from the old ones. A logic programming consists of a set of facts and 
+rules. And these are used to solve a query.}
 
 \item For example, \progLang{Haskell}(functional language) and \progLang{Prolog}(logic language).
 \note[item]{\progLang{Haskell} is a functional programming language while \progLang{Prolog} is a logic programming language.}
