--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -304,6 +304,7 @@ rules. And these are used to solve a query.}
 
 %% ====================================================================-
 \subsection{Functional Programming}
+\begin{comment}
 \begin{frame}
 \frametitle{Functional Programming}
   \begin{columns}[T]
@@ -325,6 +326,7 @@ Programming in a functional language consists of building definitions and using 
     \end{column}
   \end{columns}
 \end{frame}
+\end{comment}
 
 \begin{frame}{Functional Programming}
 
