Added minted package.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -80,6 +80,7 @@
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
 \usepackage{tikz}
 \usepackage{comment}
+\usepackage{minted}
 %---------------------------------------------------------------------------------------------
 %%  This file is really -*-LaTeX-*-
 %%             File:  thesis-macros.sty
