--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -329,21 +329,24 @@ Programming in a functional language consists of building definitions and using 
 \end{frame}
 \end{comment}
 
-\begin{frame}{Functional Programming}
-
+\begin{frame}[fragile]{Functional Programming}
 \begin{itemize}
-\item Functional programming.
-\note[item]{works by applying mathematical functions to arguments to get results. A program is not but functions which can also be passed 
-to other functions as arguments.}
+\item $\lambda$-calculi, is a formal system in mathematical logic for expressing computations.
+\note[item]{Fcuntional programming works by applying mathematical functions to arguments to get results. A program is not but functions 
+which can also be passed to other functions as arguments.}
 
-\item $\lambda$-calculi.
-\note[item]{is a formal system in mathematical logic for expressing computations.}
 \note[item]{The typed variant of $\lambda$-calculi puts restrictions on the type of data a function can work with.}
 
-\item Damas-Hindley-Milner type system.
-\note[item]{provides the ability to give a most general type to a function or program.}
+\item Damas-Hindley-Milner type system provides the ability to give a most general type to a function or program.
 
-\item For example, \progLang{Haskell}, \progLang{Scheme} and \progLang{Lisp}.
+\begin{minted}[linenos]{haskell}
+add :: Int -> Int -> Int
+add x y = x + y
+\end{minted}
+
+\note[item]{For example, the \haskellConstruct{add} function takes as input two integers and returns their sum as the result.}
+
+\item For example, \progLang{Scheme} and \progLang{Lisp}.
 \end{itemize}
 \end{frame}
 
