Corrected note in Functional Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -332,7 +332,7 @@ Programming in a functional language consists of building definitions and using 
 \begin{frame}[fragile]{Functional Programming}
 \begin{itemize}
 \item $\lambda$-calculi, is a formal system in mathematical logic for expressing computations.
-\note[item]{Fcuntional programming works by applying mathematical functions to arguments to get results. A program is not but functions 
+\note[item]{Fucntional programming works by applying mathematical functions to arguments to get results. A program is not but functions 
 which can also be passed to other functions as arguments.}
 
 \note[item]{The typed variant of $\lambda$-calculi puts restrictions on the type of data a function can work with.}
