Added side effect point in Functional Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -347,6 +347,10 @@ add x y = x + y
 \note[item]{For example, the \haskellConstruct{add} function takes as input two integers and returns their sum as the result.}
 
 \item For example, \progLang{Scheme} and \progLang{Lisp}.
+
+\item Side-effect free.
+\note[item]{Functional programs are side-effect free, meaning, the state is not modified in any way when the functions are executed.}
+\note[item]{Our \haskellConstruct{add} function does not change the values of x or y and just returns their sum.}
 \end{itemize}
 \end{frame}
 
