Commented Logic Programming in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -394,6 +394,7 @@ add x y = x + y
 
 
 
+\begin{comment}
 %% ====================================================================-
 \subsection{Logic Programming}
 \begin{frame}{Logic Programming}
@@ -408,6 +409,7 @@ add x y = x + y
 \end{itemize}
 \end{frame}
 
+\end{comment}
 %% ====================================================================-
 \subsection{\progLang{Prolog}}
 \begin{frame}
