Added some script to Embedding Languages in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -442,6 +442,8 @@ for goals in the body of the clause.
 
 \begin{frame}
 \frametitle{Embedding Languages}
+\note[item]{This section deals with embedding a target language in to the host environement.}
+\note[item]{The aim of this approach is to bring the target language functionalities to the host language.}
 
 Implementing a language within another language.
 
@@ -449,12 +451,14 @@ Implementing a language within another language.
 \item Foreign Function Interface (FFI)
  \\* A mechanism by which a program written in one programming language can make use of services written in another language. 
 \\* For example, \progLang{Haskell} provides a mechanism to embed \progLang{C} code in its programs.
+\note{A foreign function interface allows programs to cooperate with programs written with other languages.}
 
 \item Library or Module Extension
 \\* Replicate the features and characteristics of the target language into the host. 
 \\* For example, \progLang{LogLisp} is \progLang{Prolog} library for \progLang{Lisp}. 
-\end{itemize}
 \note[item]{}
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}{Embedding \progLang{Prolog}}
