Added script for Embedding Languages in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -456,7 +456,7 @@ Implementing a language within another language.
 \item Library or Module Extension
 \\* Replicate the features and characteristics of the target language into the host. 
 \\* For example, \progLang{LogLisp} is \progLang{Prolog} library for \progLang{Lisp}. 
-\note[item]{}
+\note[item]{A micro language is implemented using the host language constructs to replicate the target language.}
 \end{itemize}
 
 \end{frame}
