Polished content and script in Merging Paradigms in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -499,39 +499,33 @@ Implementing a language within another language.
 \subsection{Multi Paradigm Languages}
 
 \begin{frame}
+\note[item]{In this section we talk about languages that exhibit properties from multiple paradigms.}
 \frametitle{Merging Paradigms}
 \begin{itemize}
-\item Combining different programming paradigms or programming styles in one environment or in one system.
+\item Combining different programming paradigms or programming styles into a single environment resulting in a hybrid language.
+\note[item]{Attemp to combine properties(many a times conflicting in nature) of languages and/or paradigms }
 
 \item The idea of a multi paradigm language is to provide a framework in which programmers can work in a variety of styles, freely
 intermixing constructs from different paradigms.
-\end{itemize}
-\note[item]{}
-
-\end{frame}
-
-
-\begin{frame}{Multi Paradigm Languages (Functional Logic Languages)}
-\note[item]{In this section we talk about languages that exhibit properties from multiple paradigms.}
-\begin{itemize}
-\item Multi paradigm language.
 \note[item]{A multi-paradigm programming language is a programming language that supports more than one programming paradigm allowing the 
-programmer to work in a variety of styles.[https://developer.mozilla.org/ar/docs/multiparadigmlanguage.html]}
+	programmer to work in a variety of styles.[https://developer.mozilla.org/ar/docs/multiparadigmlanguage.html]}
 
-\item For example, \progLang{Scala}.
+\item For example, \progLang{Scala} is an object functional programming language.
 \note[item]{A notable example is \progLang{Scala}, object functional language based on \progLang{Java}. Simply put it is Java with strong 
-funcitonal characteristics such as higher order functions.}
+	funcitonal characteristics such as higher order functions.}
 
 \item Functional Logic programming languages.
 \note[item]{are hybrid declarative languages exhibiting functional and logic programming languages.}
 
 \item For example, \progLang{Curry}.
 \note[item]{is a \progLang{Haskell} based functional logic programming language providing the choice operator for non deterministic
-operations along with two way pattern matching.}
+	operations along with two way pattern matching.}
 
 \item Other examples, \progLang{Mercury}.
 \note[item]{which goes the other way round, starting from \progLang{Prolog} and adding \progLang{Haskell} features.}
+
 \end{itemize}
+
 
 \end{frame}
 
