--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -568,10 +568,31 @@ fib n = fib (n-1) + fib (n-2)
 \end{minted}
 \note[item]{\progLang{Haskell} selects the appropriate computation depending on the result of matching the value of n to the patterns one by one.}
 
-\item Unification
 \end{itemize}
 
 \end{frame}
+
+\begin{frame}
+\frametitle{Unification}
+\begin{itemize}
+\item The way in which \progLang{Prolog} matches two terms is called unification. 
+\note[item]{The idea is similar to that of unification in logic: we have two terms and we want to see if they can be made to represent the same structure.}
+\begin{itemize}
+\item If term1 and term2 are constants, then term1 and term2 unify if and only if they are the same atom, or the same number.
+
+\item If term1 is a variable and term2 is any type of term, then term1 and term2 unify, and term1 is instantiated to term2 . Similarly, if term2 is a variable and term1 is any type of term, then term1 and term2 unify, and term2 is instantiated to term1 . (So if they are both variables, they’re both instantiated to each other, and we say that they share values.)
+
+\item If term1 and term2 are complex terms, then they unify if and only if:
+They have the same functor and arity, and
+all their corresponding arguments unify, and
+the variable instantiations are compatible.
+
+\item Two terms unify if and only if it follows from the previous three clauses that they unify.
+\end{itemize}
+
+\end{itemize}
+\end{frame}
+
 
 %% ====================================================================-
 
