Added content and script to Language selection in The Problem.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -644,12 +644,11 @@ particular domain.}
 \section{The Problem}
 
 %% ====================================================================-
-\subsection{Scope}
-\begin{frame}{Scope}
+\subsection{Language Selection}
+\begin{frame}
+	\frametitle{Choosing a Language}
 	\note[item]{The versatility of a programming language is how well it can adapt to a particular problem.}
-	\note[item]{For instance, \progLang{Prolog} is good for rule based systems. "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
-		Prolog[https://ti.arc.nasa.gov/m/pub-archive/999h/0999\%20\%28Rayner\%29.pdf].}
- \frametitle{General versus Special}
+
  \begin{columns}[T]
   \begin{column}{0.5\textwidth}
    \begin{block}{General Purpose Language}
@@ -668,6 +667,13 @@ particular domain.}
    \end{block}
   \end{column}
  \end{columns}
+
+\begin{itemize}
+\item For example, "Clarissa", a voice user interface for browsing procedures on the International Space Station.
+	\note[item]{For instance, \progLang{Prolog} is good for rule based systems. "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
+		Prolog[https://ti.arc.nasa.gov/m/pub-archive/999h/0999\%20\%28Rayner\%29.pdf].}
+	\note[item]{Simply speaking, it is like "siri" for the International Space Station.}
+\end{itemize}
  
 \end{frame}
 
