Added script and content to Programmer's Dilemma and Problem Statement.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -697,11 +697,24 @@ capabilities.}
 %% ====================================================================-
 \begin{frame}
 \frametitle{Programmer's Dilemma}
+\note[item]{Choosing a language is quite a daunting task. There are costs related to migration, training among others.}
+\note[item]{And not to mention the options.}
 \begin{figure}
     \includegraphics[height = 0.6\textwidth, width=0.6\textwidth]{programming-languages_2.png} 
     \caption{The Graph of programming Languages}
  \end{figure} 
  \note[item]{}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Problem Statement}
+	\begin{itemize}
+		\item Replicating functionality.
+		\note[item]{One option is to replicate the target language funcitonality in the current environment, and that is what we will look at 
+			today. Replicating \progLang{Prolog}-like functionality in \progLang{Haskell}}
+		\note[item]{The result is something close to a \textit{haskellised} \progLang{Prolog}, a functional eDSl with logic programming 
+			capabilities.}
+	\end{itemize}
 \end{frame}
 
 %% ====================================================================-
