Added content and script to Problem Statement.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -710,9 +710,13 @@ capabilities.}
 	\frametitle{Problem Statement}
 	\begin{itemize}
 		\item Replicating functionality.
-		\note[item]{One option is to replicate the target language funcitonality in the current environment, and that is what we will look at 
-			today. Replicating \progLang{Prolog}-like functionality in \progLang{Haskell}}
-		\note[item]{The result is something close to a \textit{haskellised} \progLang{Prolog}, a functional eDSl with logic programming 
+		\note[item]{One option is to replicate the target language funcitonality in the current environment,}
+		
+		\item \progLang{Prolog}-like functionality in \progLang{Haskell}.
+		\note[item]{, and that is what we will look at today. Replicating \progLang{Prolog}-like functionality in \progLang{Haskell}}
+		
+		\item \textit{haskellised} \progLang{Prolog}-like eDSL
+		\note[item]{The result is something close to a \textit{haskellised} \progLang{Prolog}, a functional eDSL with logic programming 
 			capabilities.}
 	\end{itemize}
 \end{frame}
