--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -888,13 +888,70 @@ direction for solving the problem of embedding languages.}
 \end{comment}
 %% ====================================================================-
 \subsection{Functorizing a language}
-\begin{frame}{Functorizing a language}
+\begin{frame}[fragile=singleslide]
+\frametitle{{Functorizing a language}}
 \begin{itemize}
-\item
+\item Consider the following recursive grammar,
+
+
+$1.  S \rightarrow aSb$
+
+
+$2. S \rightarrow ba$
+
+Example term : $ S \Rightarrow aSb \Rightarrow aaSbb \Rightarrow aababb $
+
+\note[item]{A recursive grammar locks you into the language and does not allow you introduce external ??quantifiers and logic??}
+
+\item Closed language,
+
+\begin{minted}[linenos]{haskell}
+data Term = Struct Atom [Term]
+	| Var VariableName
+	| Wildcard
+	| Cut Int deriving (Eq, Data, Typeable)
+\end{minted}
+\note[item]{Our expressions can only be  built using \progLang{Term} and nothing else.}
+
+\item Open language,
+\begin{minted}[linenos]{haskell}
+data FlatTerm a = Struct Atom [a]
+	|  Var VariableName
+	|  Wildcard
+	|  Cut Int deriving (Show, Eq, Ord)
+\end{minted}
+\note[item]{On the other hand, due to the addition of the type variable \haskellConstruct{a}, functionality can be injected into the language. }
+
 \end{itemize}
 
 \end{frame}
 
+\begin{frame}[fragile=singleslide]
+\frametitle{{Functorizing a language}}
+\begin{itemize}
+
+\item Manual extension,
+\begin{minted}[linenos]{haskell}
+data Term = Struct Atom [Term]
+	| Var VariableName
+	| Wildcard
+	| Cut Int
+	| New_Constructor_1 .........
+	| New_Constructor_2 ......... 
+	deriving (Eq, Data, Typeable, .....)
+\end{minted}
+\note[item]{A manual extension would result in modying the base language and the operations related to it.}
+
+\item Functorized Extension,
+\begin{minted}[linenos]{haskell}
+data Extended f = New_Constructor_1 ...
+	| New_Constructor_2 ....
+	| Base (f (Extended f)) 
+	deriving (Eq, Data, Typeable, .....)
+\end{minted}
+\note[item]{Meanwhile, for the open language, a quantifier such as \haskellConstruct{Extended} can be used. }
+\end{itemize}
+\end{frame}
 
 %% ====================================================================-
 \subsection{Monadic unification}
