Modified size of prototype 2 architecture image in Prototype 2.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1029,7 +1029,7 @@ direction for solving the problem of embedding languages.}
 
 \begin{frame}{Prototype 2}
 \begin{figure}[H]
-  \includegraphics[width=1\textwidth]{Prototype-2-architecture.jpeg}
+  \includegraphics[width=1\textwidth, height=0.75\textheight]{Prototype-2-architecture.jpeg}
   \caption{Architecture of Prototype 2}
   \label{fig:proto1-arch}
 \end{figure}
