Added script to Prototype 2 architecture in Prototype 2.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1033,7 +1033,12 @@ direction for solving the problem of embedding languages.}
   \caption{Architecture of Prototype 2}
   \label{fig:proto1-arch}
 \end{figure}
-
+\note[item]{The procedure remain quite similar.}
+\note[item]{Open up the language.}
+\note[item]{Make it unifiable.}
+\note[item]{Carry out the unification procedure.}
+\note[item]{Extract and reconvert the results.}
+\note[item]{Since this process takes place within the interpreter, the results are pushed back and the process continues.}
 \end{frame}
 
 
