Modified size of Prototype 3 architecture in Prototype 3.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1054,7 +1054,7 @@ direction for solving the problem of embedding languages.}
 
 \begin{frame}{Prototype 3}
 \begin{figure}[H]
-  \includegraphics[width=0.75\textwidth]{Prototype-3-architecture.jpeg}
+  \includegraphics[width=0.75\textwidth, height=0.75\textheight]{Prototype-3-architecture.jpeg}
   \caption{Architecture of Prototype 3}
   \label{fig:proto1-arch}
 \end{figure}
