Added content and script to Contributions in Protoype 3.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1047,8 +1047,21 @@ direction for solving the problem of embedding languages.}
 
 \begin{frame}
 \frametitle{Contributions}
+\note[item]{Prototype 2 demonstrated how the procedure can be applied to recursive grammars and carry out unification irrespective of the scheduling policy of the interpreter.}
 \begin{itemize}
-\item
+\item Variable search strategy,
+\note[item]{In Prototype 3 we work with variable search strategies.}
+\note[item]{The base implementation is based on a \progLang{Prolog}-like interpreter for \progLang{Haskell 98}.}
+
+\note[item]{We work with 3 different search strategies,}
+\begin{itemize}
+\item Stack Engine,
+
+\item Pure Engine, and,
+
+\item Andorra Engine.
+\end{itemize}
+
 \end{itemize}
 \end{frame}
 
