Added script to Prototype 3 architecture in Prototype 3.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1071,6 +1071,8 @@ direction for solving the problem of embedding languages.}
   \caption{Architecture of Prototype 3}
   \label{fig:proto1-arch}
 \end{figure}
+\note[item]{The procedure for Prototype 3 remains the same.}
+\note[item]{The query resolver takes an additional input which is the search strategy at compile time.}
 \end{frame}
 
 
