Changed multi to two in Contributions in Protoype 4.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -1093,8 +1093,8 @@ direction for solving the problem of embedding languages.}
 \item Interpreted program is pure.
 \note[item]{upon interpretation the program is still pure as no actions has been executed.}
 
-\item Multi-stage interpretation strategy.
-\note[item]{Because of this we can have a multi stage interpretation strategy.}
+\item Two-stage interpretation strategy.
+\note[item]{Because of this we can have a two stage interpretation strategy.}
 \end{itemize}
 \end{frame}
 
