--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -202,6 +202,90 @@ A programming language is an artificial language designed to communicate instruc
 \note[item]{They are in the hundereds of thousands and the number keeps on increasing.}
 \end{frame}
 
+%% -------------------------------------------------------------------
+\begin{frame}
+\frametitle{\progLang{Haskell}}
+ \note[item]{One such language is \progLang{Haskell}.} 
+  \begin{columns}[T]
+    \begin{column}{.7\textwidth}
+     \begin{block}{}
+\progLang{Haskell} is an advanced purely-functional programming language. In particular, it is a 
+\begin{itemize}
+\item Polymorphically statically typed,
+\note[item]{Every expression in Haskell has a type which is determined at compile time.}
+
+\item Type inference,
+\note[item]{You don't have to explicitly write out every type in a Haskell program.}
+
+\item Lazy,
+\note[item]{Functions don't evaluate their arguments until required.}
+
+\item Purely Functional.
+\note[item]{Every function in Haskell is a function in the mathematical sense (i.e., "pure").}
+\end{itemize}
+
+    \end{block}
+    \end{column}
+    \begin{column}{.3\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=\textwidth]{haskelllogo.jpg} 
+    \caption{\progLang{Haskell} Programming Language}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+\end{frame}
+%% -------------------------------------------------------------------
+
+
+
+
+\begin{comment}
+%% ====================================================================-
+\subsection{Logic Programming}
+%% -------------------------------------------------------------------
+\begin{frame}{Logic Programming}
+\begin{itemize}
+\item Logic programming.
+\note[item]{is based on formal logic. A program consists of a set of rules used to derive a solution.}
+
+\item Universal Horn clauses.
+\note[item]{A Horn clause is a clause (a disjunction of literals) with at most one positive literal.}
+
+\item For example, \progLang{Prolog}.
+\end{itemize}
+\end{frame}
+%% -------------------------------------------------------------------
+
+\end{comment}
+
+%% -------------------------------------------------------------------
+\begin{frame}
+\frametitle{\progLang{Prolog}}
+  \begin{columns}[T]
+    \begin{column}{.6\textwidth}
+     \begin{block}{}
+General purpose logic programming language with over 20 distributions. \progLang{Prolog} is a programming language borrowing its basic 
+constructs from logic. A pure \progLang{Prolog} program is a logic program, in which an order is defined both clauses in the program and 
+for goals in the body of the clause.
+    \end{block}
+    \end{column}
+    \begin{column}{.4\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=\textwidth]{swipl.png} 
+    \caption{\textsc{SWI Prolog} Distribution}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+\end{frame}
+%% -------------------------------------------------------------------
+
+%% ====================================================================-
 \subsection{Programming Language Paradigms}
 \begin{frame}
 \frametitle{Programming Language Paradigms}
@@ -250,33 +334,8 @@ Programming languages are classified into paradigms depending on their character
 \end{frame}
 
 
-%% ====================================================================-
-%% ====================================================================-
-\section{Background}
 
-%% ====================================================================-
-\subsection{Overview}
-\begin{frame}{Background Overview}
-\frametitle{Background Overview}
-\note[item]{For the background, we will look at,}
-\begin{itemize}
-\item Declarative programming and languages.
-\note[item]{The declarative stlye of programming,} 
-
-\item Functional and logic programming.
-\note[item]{and it's sub-paradigms functional and logic programming,}
-
-\item \progLang{Haskell} and \progLang{Prolog}.
-\note[item]{along with the languages in question, \progLang{Haskell} and \progLang{Prolog},}
-
-\item Merging programming languages.
-\note[item]{And the approaches for bringing programming languages together.}
-\end{itemize}
-\end{frame}
-
-
-%% ====================================================================-
-\subsection{Declarative Programming}
+%% -------------------------------------------------------------------
 \begin{frame}
 \frametitle{Declarative Programming}
 \begin{itemize}
@@ -302,9 +361,8 @@ rules. And these are used to solve a query.}
 
 \end{itemize}
 \end{frame}
+%% -------------------------------------------------------------------
 
-%% ====================================================================-
-\subsection{Functional Programming}
 \begin{comment}
 \begin{frame}
 \frametitle{Functional Programming}
@@ -329,6 +387,7 @@ Programming in a functional language consists of building definitions and using 
 \end{frame}
 \end{comment}
 
+%% -------------------------------------------------------------------
 \begin{frame}[fragile]{Functional Programming}
 \begin{itemize}
 \item $\lambda$-calculi, is a formal system in mathematical logic for expressing computations.
@@ -353,93 +412,16 @@ add x y = x + y
 \note[item]{Our \haskellConstruct{add} function does not change the values of x or y and just returns their sum.}
 \end{itemize}
 \end{frame}
+%% -------------------------------------------------------------------
 
-%% ====================================================================-
-\subsection{\progLang{Haskell}}
-\begin{frame}
-\frametitle{\progLang{Haskell}}
- \note[item]{One such language is \progLang{Haskell}.} 
-  \begin{columns}[T]
-    \begin{column}{.7\textwidth}
-     \begin{block}{}
-\progLang{Haskell} is an advanced purely-functional programming language. In particular, it is a 
-\begin{itemize}
-\item Polymorphically statically typed,
-\note[item]{Every expression in Haskell has a type which is determined at compile time.}
-
-\item Type inference,
-\note[item]{You don't have to explicitly write out every type in a Haskell program.}
-
-\item Lazy,
-\note[item]{Functions don't evaluate their arguments until required.}
-
-\item Purely Functional.
-\note[item]{Every function in Haskell is a function in the mathematical sense (i.e., "pure").}
-\end{itemize}
-
-    \end{block}
-    \end{column}
-    \begin{column}{.3\textwidth}
-    \begin{block}{}
-% Your image included here
-\begin{figure}
-    \includegraphics[width=\textwidth]{haskelllogo.jpg} 
-    \caption{\progLang{Haskell} Programming Language}
- \end{figure}   
-    \end{block}
-    \end{column}
-  \end{columns}
-\end{frame}
-
-
-
-
-\begin{comment}
-%% ====================================================================-
-\subsection{Logic Programming}
-\begin{frame}{Logic Programming}
-\begin{itemize}
-\item Logic programming.
-\note[item]{is based on formal logic. A program consists of a set of rules used to derive a solution.}
-
-\item Universal Horn clauses.
-\note[item]{A Horn clause is a clause (a disjunction of literals) with at most one positive literal.}
-
-\item For example, \progLang{Prolog}.
-\end{itemize}
-\end{frame}
-
-\end{comment}
-%% ====================================================================-
-\subsection{\progLang{Prolog}}
-\begin{frame}
-\frametitle{\progLang{Prolog}}
-  \begin{columns}[T]
-    \begin{column}{.6\textwidth}
-     \begin{block}{}
-General purpose logic programming language with over 20 distributions. \progLang{Prolog} is a programming language borrowing its basic 
-constructs from logic. A pure \progLang{Prolog} program is a logic program, in which an order is defined both clauses in the program and 
-for goals in the body of the clause.
-    \end{block}
-    \end{column}
-    \begin{column}{.4\textwidth}
-    \begin{block}{}
-% Your image included here
-\begin{figure}
-    \includegraphics[width=\textwidth]{swipl.png} 
-    \caption{\textsc{SWI Prolog} Distribution}
- \end{figure}   
-    \end{block}
-    \end{column}
-  \end{columns}
-\end{frame}
 
 
 
 
 %% ====================================================================-
-\subsection{Embedding Programming Languages}
+\subsection{Combining Programming Languages}
 
+%% -------------------------------------------------------------------
 \begin{frame}
 \frametitle{Embedding Languages}
 \note[item]{This section deals with embedding a target language in to the host environement.}
@@ -460,7 +442,9 @@ Implementing a language within another language.
 \end{itemize}
 
 \end{frame}
+%% -------------------------------------------------------------------
 
+%% -------------------------------------------------------------------
 \begin{frame}{Embedding \progLang{Prolog}}
 \note[item]{This section deals with embedding a target language in the host environement.}
 \note[item]{The aim of this approach to bring the target language functionalities to the host language.}
@@ -491,13 +475,12 @@ Implementing a language within another language.
 \note[item]{libraries related to propositional logic, backtracking and unification.}
 \end{itemize}
 \end{frame}
+%% -------------------------------------------------------------------
 
 
 
 
-%% ====================================================================-
-\subsection{Multi Paradigm Languages}
-
+%% -------------------------------------------------------------------
 \begin{frame}
 \note[item]{In this section we talk about languages that exhibit properties from multiple paradigms.}
 \frametitle{Merging Paradigms}
@@ -526,8 +509,8 @@ intermixing constructs from different paradigms.
 
 \end{itemize}
 
-
 \end{frame}
+%% -------------------------------------------------------------------
 
 
 %% ====================================================================-
@@ -1138,28 +1121,36 @@ direction for solving the problem of embedding languages.}
 %% ====================================================================-
 %% ====================================================================-
 \section{Conclusion}
+%% ---------------------------------------------------------------------
 \begin{frame}{Conclusion}
 \begin{itemize}
 \item
 \end{itemize}
 
 \end{frame}
+%% ---------------------------------------------------------------------
 
+%% ---------------------------------------------------------------------
 \begin{frame}{The End}
 \begin{center}
 \Huge Thank you!
 \end{center}
 \end{frame}
+%% ---------------------------------------------------------------------
 
+%% ---------------------------------------------------------------------
 \begin{frame}{The End}
 \begin{center}
 \Huge Questions?
 \end{center}
 \end{frame}
+%% ---------------------------------------------------------------------
 
+%% ---------------------------------------------------------------------
 \begin{frame}
 \Huge{\centerline{The End}}
 \end{frame}
+%% ---------------------------------------------------------------------
 
 \begin{comment}
 \section{Bibliography}
